Fix timeline module collapsing causing jumping Clean up JS into defined functions for clarity Add a nav-bar handler for loading into the page from non-default pos

--- a/frontend/index/bulma-timeline.sass
+++ b/frontend/index/bulma-timeline.sass
@@ -7,7 +7,7 @@ $timeline-line-color: $grey-lighter !default
 $timeline-line-width: .1em !default
 $timeline-line-style: solid !default
 $timeline-line: $timeline-line-width $timeline-line-style $timeline-line-color !default
-$timeline-content-padding: 1em 0 0 2em !default
+$timeline-content-padding: 0em 0 0 2em !default
 $timeline-rtl-content-padding: 1em 2em 0 0 !default
 $timeline-icon-size: $size-small !default
 $timeline-header-width: 4em !default
